# Dubai-Land-Department-Analytics

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: keep-alive.yml  test.yml
.streamlit/: config.toml
api/: main.py
artifacts/models/: delivery_lgbm.joblib  delivery_metrics.json  reference.joblib
dashboard/: app.py  bootstrap.py  home.py  style.py
dashboard/pages/: 1_Market_Overview.py  2_Geospatial_Map.py  3_Delivery_Predictor.py  4_Market_Forecast.py  5_District_Intelligence.py  6_Delivery_Watchlist.py
input/: Real_Estate_Transactions_2026-06-23.xlsx  projects_2026-05-21_02-07-22_1.xlsx
src/realestate/: build_artifacts.py  cleaning.py  config.py  data_access.py  db.py  dda_client.py  geo.py  ingestion.py  logging_config.py  pipeline.py  scheduler.py  schemas.py  translation.py
src/realestate/analysis/: anomaly.py  developers.py  market.py  market_intel.py  projects_analysis.py  stats_tests.py
src/realestate/models/: features.py  forecast.py  inference.py  lgbm_model.py  segmentation.py
src/realestate/reporting/: weekly_report.py
tests/: conftest.py  test_analysis.py  test_api.py  test_cleaning.py  test_db.py  test_dda_client.py  test_ingestion.py  test_market_intel.py  test_models.py  test_pipeline.py  test_reporting.py  test_utils.py  test_validation.py
