[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dubai-real-estate-analytics"
version = "1.0.0"
description = "Dubai Real Estate Analytics Platform — ETL, analysis, ML, API and dashboard on Dubai Pulse & DLD open data."
requires-python = ">=3.10"
authors = [{ name = "Hamza Shuja", email = "hamza.shuja99@gmail.com" }]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

[tool.coverage.run]
source = ["src/realestate"]
